[package]
name = "diesel_sandbox"
version = "0.1.0"
authors = ["Matteo Giachino <matteog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
fake = "2.2.0"